# compare-data

./: .devcontainer.json  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/cmpd/: main.py
tests/: test_cmpd_set.py  test_cmpd_sum.py
tests/data/test2/: control.csv  input.csv
tests/data/test3/: inputA.csv  inputB.csv
tests/data/test4/: inputA.csv  inputB.csv
tests/testdata/: control.csv  input.csv
