[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmpd"
version = "0.1.2"
authors = [
    { name="Zaid Waqi", email="zaidwaqi@gmail.com" },
]
description = "A command line tool that compares data."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pyarrow",
  "pandas",
  "numpy"
]

[project.urls]
Homepage = "https://github.com/zaidwaqi/compare-data"
Issues = "https://github.com/pypa/zaidwaqi/compare-data/issues"

[project.scripts]
cmpd = "cmpd.main:main"